--- a/XSS/templates/index.html
+++ b/XSS/templates/index.html
@@ -1,9 +1,63 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 
 {% block head %}
 <title>Snake Adoption 🐍</title>
-{% endblock %}
+{% endblock %} 
 
 {% block body %}
+<h1>The Official Snake Care and Adoption Site 🐍</h1>
+<h2>Choose a snake to adopt!</h2>
+<form action="/" method="POST">
+    <input type="text" name="content" id="content">
+    <input type="submit" value="Adopt!">
+</form>
+<script>
+  var name = getName();
+  console.log(name);
+</script>
+<div class="row">
+  <div class="column">
+    <img
+      src="https://d2r8r0qhs4bt8m.cloudfront.net/wp-content/uploads/2019/10/18163743/desktop-1425399420.jpg"
+      alt="Snow"
+      style="width: 100%"
+    />
+    <h1>Robert McMuffin</h1>
+    <h2>id: p1</h2>
+    <h1 id="p1">
+      Family was sold in Hawaii.<br />
+      Robert the only survivor of the 1999 Airplane Kidnapping of the Kobras
+      Gang.
+    </h1>
+  </div>
+  <div class="column">
+    <img
+      src="https://d2r8r0qhs4bt8m.cloudfront.net/wp-content/uploads/2019/10/18163740/desktop-1425402434.jpg"
+      alt="Forest"
+      style="width: 100%"
+    />
+    <h1>June Goldman</h1>
+    <h2>id: p2</h2>
+    <h1 id="p2">
+      Born in July. <br />Loves cloudy days and rainbows.<br />Secretly envies
+      Robert's hat.
+    </h1>
+  </div>
+  <div class="column">
+    <img
+      src="https://sp-ao.shortpixel.ai/client/to_webp,q_glossy,ret_img,w_750/https://www.everythingreptiles.com/wp-content/uploads/2020/11/Cute-Snakes.jpg"
+      alt="Mountains"
+      style="width: 100%"
+    />
+    <h1>Jerry Tom</h1>
+    <h2>id: p3</h2>
+    <h1 id="p3">
+      Nothing is known about him.<br />
+      Maybe has ties with the Yakuza.
+    </h1>
+  </div>
+
+  
+</div>
 
 {% endblock %}
