added cookies through flask to the CSRF site

--- a/CSRF/templates/evilget.html
+++ b/CSRF/templates/evilget.html
@@ -10,7 +10,9 @@
     <h1>Evil Site</h1>
     <h2>I will hack you</h2>
 
-    <form id="form" action="/pizzastore.html?price=1$&value=p1" method="get">
+    <form id="form" action="/" method="POST">
+      <input type="text" value="id" />
+      <input type="text" value="price" />
       <input type="submit" value="Click Me!" />
     </form>
 
